test/spec_vectors/simd_bitwise/fail/module_5.wat
(module (func (result v128) (v128.or (i32.const 0) (v128.const i32x4 0 0 0 0))))